JavaUtils 1.0.0 b8
- Added JavaUtils Unit tests
- Updated compilation, wiki
- Fixed and optimized some stuff
- Merged ArrayUtils and ListUtils classes
- Added maven enforcer plugin